Add back some multipliers

--- a/binaries/data/mods/public/simulation/templates/template_unit_cavalry.xml
+++ b/binaries/data/mods/public/simulation/templates/template_unit_cavalry.xml
@@ -94,6 +94,7 @@
   </StatusBars>
   <UnitMotion>
     <WalkSpeed>16.5</WalkSpeed>
+    <RunMultiplier>2.5</RunMultiplier>
   </UnitMotion>
   <Vision>
     <Range>92</Range>
