--- a/binaries/data/mods/public/simulation/templates/template_unit_dog.xml
+++ b/binaries/data/mods/public/simulation/templates/template_unit_dog.xml
@@ -86,6 +86,7 @@
   </TrainingRestrictions>
   <UnitMotion>
     <WalkSpeed>14.5</WalkSpeed>
+    <RunMultiplier>2.5</RunMultiplier>
   </UnitMotion>
   <Vision>
     <Range>30</Range>
