--- a/binaries/data/mods/public/simulation/templates/template_unit_fauna.xml
+++ b/binaries/data/mods/public/simulation/templates/template_unit_fauna.xml
@@ -32,6 +32,7 @@
   </UnitAI>
   <UnitMotion>
     <WalkSpeed>6.5</WalkSpeed>
+    <RunMultiplier>2.0</RunMultiplier>
   </UnitMotion>
   <Visibility>
     <RetainInFog>true</RetainInFog>
