--- a/binaries/data/mods/public/simulation/templates/template_unit_fauna_hunt_whale.xml
+++ b/binaries/data/mods/public/simulation/templates/template_unit_fauna_hunt_whale.xml
@@ -49,5 +49,6 @@
   <UnitMotion>
     <PassabilityClass>ship-small</PassabilityClass>
     <WalkSpeed>11.5</WalkSpeed>
+    <RunMultiplier>1.0</RunMultiplier>
   </UnitMotion>
 </Entity>
