--- a/binaries/data/mods/public/simulation/templates/template_unit_hero_infantry.xml
+++ b/binaries/data/mods/public/simulation/templates/template_unit_hero_infantry.xml
@@ -38,4 +38,7 @@
       <death>actor/human/death/{gender}_death.xml</death>
     </SoundGroups>
   </Sound>
+  <UnitMotion>
+    <RunMultiplier>1.6</RunMultiplier>
+  </UnitMotion>
 </Entity>
