--- a/binaries/data/mods/public/simulation/templates/template_unit_infantry.xml
+++ b/binaries/data/mods/public/simulation/templates/template_unit_infantry.xml
@@ -119,6 +119,7 @@
   </Sound>
   <UnitMotion>
     <WalkSpeed>9</WalkSpeed>
+    <RunMultiplier>1.6</RunMultiplier>
   </UnitMotion>
   <Vision>
     <Range>80</Range>
