--- a/binaries/data/mods/public/simulation/templates/template_unit_infantry_ranged.xml
+++ b/binaries/data/mods/public/simulation/templates/template_unit_infantry_ranged.xml
@@ -34,4 +34,7 @@
       <attack>attack/weapon/arrowfly.xml</attack>
     </SoundGroups>
   </Sound>
+  <UnitMotion>
+    <RunMultiplier>2.0</RunMultiplier>
+  </UnitMotion>
 </Entity>
