--- a/binaries/data/mods/public/simulation/templates/template_unit_support.xml
+++ b/binaries/data/mods/public/simulation/templates/template_unit_support.xml
@@ -31,4 +31,7 @@
   <UnitAI>
     <DefaultStance>passive</DefaultStance>
   </UnitAI>
+  <UnitMotion>
+    <RunMultiplier>2.0</RunMultiplier>
+  </UnitMotion>
 </Entity>
